--- a/new_lights.html
+++ b/new_lights.html
@@ -82,29 +82,29 @@
 LED Control
 <br>
 
-        <button onclick="publish('RED','test',0);">RED</button>
-        <button onclick="publish('YELLOW','test',0);">YELLOW</button>
-        <button onclick="publish('GREEN','test',0);">GREEN</button>
-        <button onclick="publish('off','test',0);">OFF</button>
+        <button onclick="publish('RED','Light-Tower_test',0);">RED</button>
+        <button onclick="publish('YELLOW','Light-Tower_test',0);">YELLOW</button>
+        <button onclick="publish('GREEN','Light-Tower_test',0);">GREEN</button>
+        <button onclick="publish('off','Light-Tower_test',0);">OFF</button>
 <br>
 <br>
 Blink<br>
-        <button onclick="publish('red','test',0);">RED</button>
-        <button onclick="publish('yellow','test',0);">YELLOW</button>
-        <button onclick="publish('green','test',0);">GREEN</button>
+        <button onclick="publish('red','Light-Tower_test',0);">RED</button>
+        <button onclick="publish('yellow','Light-Tower_test',0);">YELLOW</button>
+        <button onclick="publish('green','Light-Tower_test',0);">GREEN</button>
 <br>
 <br>
 Special effects<br>
-        <button onclick="publish('fill','test',0);">FILL</button>
-        <button onclick="publish('RFILL','test',0);">REVERSE FILL</button>
-        <button onclick="publish('single','test',0);">CYCLE</button>
-        <button onclick="publish('RSING','test',0);">REVERSE CYCLE</button>
-        <button onclick="publish('flash','test',0);">FLASH</button>
+        <button onclick="publish('fill','Light-Tower_test',0);">FILL</button>
+        <button onclick="publish('RFILL','Light-Tower_test',0);">REVERSE FILL</button>
+        <button onclick="publish('single','Light-Tower_test',0);">CYCLE</button>
+        <button onclick="publish('RSING','Light-Tower_test',0);">REVERSE CYCLE</button>
+        <button onclick="publish('flash','Light-Tower_test',0);">FLASH</button>
 <br><br>
 commands<br>
-        <button onclick="publish('test','test',0);">TEST</button>
-        <button onclick="publish('random','test',0);">RANDOM</button>
-        <button onclick="publish('desktop','test',0);">DESKTOP</button>
+        <button onclick="publish('test','Light-Tower_test',0);">TEST</button>
+        <button onclick="publish('random','Light-Tower_test',0);">RANDOM</button>
+        <button onclick="publish('desktop','Light-Tower_test',0);">DESKTOP</button>
 <br>(User Beware: RANDOM pulls from <a href="https://www.reddit.com/r/Showerthoughts/top/">https://www.reddit.com/r/Showerthoughts/top/</a>. It is mostly NSFW.)
 <br>
 <br>
